--- a/ral-lens/ral-lens.cabal
+++ b/ral-lens/ral-lens.cabal
@@ -7,7 +7,7 @@ description:
   This package provides lenses and instances for type-classes in @lens@
   package.
   .
-  "Data.RAL.Lens" re-exports all orphan instances defined in this package.
+  "Data.RAVec.Lens" re-exports all orphan instances defined in this package.
 
 homepage:           https://github.com/phadej/vec
 bug-reports:        https://github.com/phadej/vec/issues
@@ -37,8 +37,9 @@ library
   hs-source-dirs:   src
   ghc-options:      -Wall -fprint-explicit-kinds
   exposed-modules:
-    Data.RAL.Lens
-    Data.RAL.Tree.Lens
+    Data.RAVec.Lens
+    Data.RAVec.NonEmpty.Lens
+    Data.RAVec.Tree.Lens
 
   build-depends:
     , base  >=4.7   && <4.14
