--- a/ral/ral.cabal
+++ b/ral/ral.cabal
@@ -55,8 +55,9 @@ library
   hs-source-dirs:   src
   ghc-options:      -Wall -fprint-explicit-kinds
   exposed-modules:
-    Data.RAL
-    Data.RAL.Tree
+    Data.RAVec
+    Data.RAVec.NonEmpty
+    Data.RAVec.Tree
 
   -- GHC boot libs
   build-depends:
