--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -11,6 +11,8 @@ steps:
   - trailing_whitespace: {}
 columns: 80
 language_extensions:
+  - DataKinds
+  - PolyKinds
   - EmptyCase
   - ExplicitForAll
   - FlexibleContexts
