--- a/ral/ral.cabal
+++ b/ral/ral.cabal
@@ -62,6 +62,10 @@ library
     Data.RAVec.NonEmpty
     Data.RAVec.Tree
 
+  other-modules:
+    Data.RAList.Internal
+    Data.RAList.NonEmpty.Internal
+
   -- GHC boot libs
   build-depends:
     , base     >=4.7     && <4.14
