--- a/ral-lens/ral-lens.cabal
+++ b/ral-lens/ral-lens.cabal
@@ -37,6 +37,8 @@ library
   hs-source-dirs:   src
   ghc-options:      -Wall -fprint-explicit-kinds
   exposed-modules:
+    Data.RAList.Lens
+    Data.RAList.NonEmpty.Lens
     Data.RAVec.Lens
     Data.RAVec.NonEmpty.Lens
     Data.RAVec.Tree.Lens
