--- a/tests/tests.cabal
+++ b/tests/tests.cabal
@@ -1,17 +1,17 @@
-cabal-version:      2.2
-name:               tests
-version:            0
-synopsis:           Tests for fin and bin and ...
-category:           Data, Dependent Types, Singletons, Tests
-description:        Separate package for tests in vec package suite
-homepage:           https://github.com/phadej/vec
-bug-reports:        https://github.com/phadej/vec/issues
-license:            GPL-2.0-or-later
-license-file:       LICENSE
-author:             Oleg Grenrus <oleg.grenrus@iki.fi>
-maintainer:         Oleg.Grenrus <oleg.grenrus@iki.fi>
-copyright:          (c) 2019 Oleg Grenrus
-build-type:         Simple
+cabal-version: 2.2
+name:          tests
+version:       0
+synopsis:      Tests for fin and bin and ...
+category:      Data, Dependent Types, Singletons, Tests
+description:   Separate package for tests in vec package suite
+homepage:      https://github.com/phadej/vec
+bug-reports:   https://github.com/phadej/vec/issues
+license:       GPL-2.0-or-later
+license-file:  LICENSE
+author:        Oleg Grenrus <oleg.grenrus@iki.fi>
+maintainer:    Oleg.Grenrus <oleg.grenrus@iki.fi>
+copyright:     (c) 2019 Oleg Grenrus
+build-type:    Simple
 tested-with:
   GHC ==7.8.4
    || ==7.10.3
@@ -31,13 +31,13 @@ library
   hs-source-dirs:   src
   ghc-options:      -Wall -fprint-explicit-kinds
   exposed-modules:
-    ModelTest
     Models
+    ModelTest
     Tests
     Uniformity
 
   build-depends:
-    , base <5
+    , base        >=0 && <5
     , bin
     , fin
     , QuickCheck
@@ -49,8 +49,7 @@ library
     , tasty-quickcheck  ^>=0.10.1
 
   if !impl(ghc >=7.10)
-    build-depends:
-        nats  >=1.1.2 && <1.2
+    build-depends: nats ^>=1.1.2
 
 test-suite all-tests
   type:             exitcode-stdio-1.0
