--- a/ral/ral.cabal
+++ b/ral/ral.cabal
@@ -98,3 +98,15 @@ library
 -- if impl(ghc >= 8.0)
 --  build-depends: dump-core
 --  ghc-options: -fplugin=DumpCore -fplugin-opt DumpCore:core-html
+
+benchmark ral-bench
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   bench
+  ghc-options:      -Wall -fprint-explicit-kinds -threaded
+  main-is:          Bench.hs
+  build-depends:
+    , base
+    , criterion
+    , ral
+    , vector
