Add mentions about -lens and -optics to vec package description

--- a/vec/vec.cabal
+++ b/vec/vec.cabal
@@ -29,6 +29,8 @@ description:
   .
   This package uses [fin](https://hackage.haskell.org/package/fin), i.e. not @GHC.TypeLits@, for indexes.
   .
+  For @lens@ or @optics@ support see [vec-lens](https://hackage.haskell.org/package/vec-lens) and [vec-optics](https://hackage.haskell.org/package/vec-optics) packages respectively.
+  .
   See [Hasochism: the pleasure and pain of dependently typed haskell programming](https://doi.org/10.1145/2503778.2503786)
   by Sam Lindley and Conor McBride for answers to /how/ and /why/.
   Read [APLicative Programming with Naperian Functors](https://doi.org/10.1007/978-3-662-54434-1_21)
