Allow base-4.14 mostly

--- a/cabal.project
+++ b/cabal.project
@@ -31,3 +31,5 @@ package vec
 -- constraints: ral -distributive
 -- constraints: ral -semigroupoids
 -- constraints: ral -adjunctions
+
+allow-newer: parallel-3.2.2.0:base
