--- a/dec/dec.cabal
+++ b/dec/dec.cabal
@@ -1,6 +1,7 @@
 cabal-version:      >=1.10
 name:               dec
 version:            0.0.3
+x-revision:         2
 synopsis:           Decidable propositions.
 category:           Data, Dependent Types
 description:
@@ -30,7 +31,8 @@ tested-with:
    || ==8.2.2
    || ==8.4.4
    || ==8.6.5
-   || ==8.8.1
+   || ==8.8.3
+   || ==8.10.1
 
 source-repository head
   type:     git
@@ -39,7 +41,7 @@ source-repository head
 
 library
   exposed-modules:  Data.Type.Dec
-  build-depends:    base >=4.7 && <4.14
+  build-depends:    base >=4.7 && <4.15
 
   if !impl(ghc >=7.10)
     build-depends: void >=0.7.2 && <0.8
