--- a/bin/bin.cabal
+++ b/bin/bin.cabal
@@ -1,6 +1,7 @@
 cabal-version:      2.2
 name:               bin
 version:            0.1
+x-revision:         1
 synopsis:           Bin: binary natural numbers.
 category:           Data, Dependent Types, Singletons, Math
 description:
@@ -40,7 +41,8 @@ tested-with:
    || ==8.2.2
    || ==8.4.4
    || ==8.6.5
-   || ==8.8.1
+   || ==8.8.3
+   || ==8.10.1
 
 source-repository head
   type:     git
@@ -61,7 +63,7 @@ library
     Data.Wrd
 
   build-depends:
-    , base        >=4.7     && <4.14
+    , base        >=4.7     && <4.15
     , dec         ^>=0.0.3
     , deepseq     >=1.3.0.2 && <1.5
     , fin         ^>=0.1.1
