--- a/fin/fin.cabal
+++ b/fin/fin.cabal
@@ -1,6 +1,7 @@
 cabal-version:      >=1.10
 name:               fin
 version:            0.1.1
+x-revision:         1
 synopsis:           Nat and Fin: peano naturals and finite numbers
 category:           Data, Dependent Types, Singletons, Math
 description:
@@ -62,7 +63,8 @@ tested-with:
    || ==8.2.2
    || ==8.4.4
    || ==8.6.5
-   || ==8.8.1
+   || ==8.8.3
+   || ==8.10.1
 
 source-repository head
   type:     git
@@ -80,7 +82,7 @@ library
     Data.Type.Nat.LT
 
   build-depends:
-      base        >=4.7     && <4.14
+      base        >=4.7     && <4.15
     , dec         >=0.0.3   && <0.1
     , deepseq     >=1.3.0.2 && <1.5
     , hashable    >=1.2.7.0 && <1.4
