--- a/ral-optics/ral-optics.cabal
+++ b/ral-optics/ral-optics.cabal
@@ -16,7 +16,8 @@ maintainer:         Oleg.Grenrus <oleg.grenrus@iki.fi>
 copyright:          (c) 2019 Oleg Grenrus
 build-type:         Simple
 extra-source-files: ChangeLog.md
-tested-with:        GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.1
+tested-with:
+  GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.3
 
 source-repository head
   type:     git
