--- a/ral/ral.cabal
+++ b/ral/ral.cabal
@@ -1,6 +1,7 @@
 cabal-version:      2.2
 name:               ral
 version:            0.1
+x-revision:         1
 synopsis:           Random access lists
 category:           Data, Dependent Types, Singletons
 description:
@@ -35,7 +36,8 @@ tested-with:
    || ==8.2.2
    || ==8.4.4
    || ==8.6.5
-   || ==8.8.1
+   || ==8.8.3
+   || ==8.10.1
 
 source-repository head
   type:     git
@@ -80,7 +82,7 @@ library
 
   -- GHC boot libs
   build-depends:
-    , base     >=4.7     && <4.14
+    , base     >=4.7     && <4.15
     , deepseq  >=1.3.0.1 && <1.5
 
   if !impl(ghc >=8.0)
