--- a/vec/vec.cabal
+++ b/vec/vec.cabal
@@ -1,6 +1,7 @@
 cabal-version:      2.2
 name:               vec
 version:            0.3
+x-revision:         1
 synopsis:           Vec: length-indexed (sized) list
 category:           Data, Dependent Types
 description:
@@ -76,7 +77,8 @@ tested-with:
    || ==8.2.2
    || ==8.4.4
    || ==8.6.5
-   || ==8.8.1
+   || ==8.8.3
+   || ==8.10.1
 
 source-repository head
   type:     git
@@ -119,7 +121,7 @@ library
 
   -- GHC boot libs
   build-depends:
-    , base          >=4.7     && <4.14
+    , base          >=4.7     && <4.15
     , deepseq       >=1.3.0.1 && <1.5
     , transformers  >=0.3.0.0 && <0.6
 
