--- a/bin/bin.cabal
+++ b/bin/bin.cabal
@@ -1,7 +1,7 @@
 cabal-version:      2.2
 name:               bin
 version:            0.1
-x-revision:         1
+x-revision:         2
 synopsis:           Bin: binary natural numbers.
 category:           Data, Dependent Types, Singletons, Math
 description:
@@ -68,7 +68,7 @@ library
     , deepseq     >=1.3.0.2 && <1.5
     , fin         ^>=0.1.1
     , hashable    >=1.2.7.0 && <1.4
-    , QuickCheck  ^>=2.13.2
+    , QuickCheck  ^>=2.13.2 || ^>=2.14
 
   if !impl(ghc >=7.10)
     build-depends: nats ^>=1.1.2
