--- a/ral/ral.cabal
+++ b/ral/ral.cabal
@@ -1,7 +1,7 @@
 cabal-version:      2.2
 name:               ral
 version:            0.1
-x-revision:         1
+x-revision:         2
 synopsis:           Random access lists
 category:           Data, Dependent Types, Singletons
 description:
@@ -96,7 +96,7 @@ library
   -- other dependencies
   build-depends:
     , hashable    >=1.2.7.0 && <1.4
-    , QuickCheck  ^>=2.13.2
+    , QuickCheck  ^>=2.13.2 || ^>=2.14
 
   if flag(distributive)
     build-depends: distributive >=0.5.3 && <0.7
