--- a/vec-optics/vec-optics.cabal
+++ b/vec-optics/vec-optics.cabal
@@ -1,6 +1,7 @@
 cabal-version:      2.2
 name:               vec-optics
 version:            0.3
+x-revision:         1
 synopsis:           Vec: length-indexed (sized) list: optics support
 category:           Data, Dependent Types, Optics
 description:
@@ -19,7 +20,8 @@ maintainer:         Oleg.Grenrus <oleg.grenrus@iki.fi>
 copyright:          (c) 2017-2019 Oleg Grenrus
 build-type:         Simple
 extra-source-files: ChangeLog.md
-tested-with:        GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.3
+tested-with:
+  GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.3 || ==8.10.1
 
 source-repository head
   type:     git
@@ -38,7 +40,7 @@ library
     Data.Vec.Pull.Optics
 
   -- GHC boot libs
-  build-depends:    base >=4.9 && <4.14
+  build-depends:    base >=4.9 && <4.15
 
   -- siblings
   build-depends:
@@ -46,7 +48,7 @@ library
     , vec  ^>=0.3
 
   -- other dependencies
-  build-depends:    optics-core ^>=0.2
+  build-depends:    optics-core >=0.2 && <0.4
   other-extensions:
     CPP
     FlexibleContexts
