--- a/tests/tests.cabal
+++ b/tests/tests.cabal
@@ -46,7 +46,7 @@ library
   build-depends:
     , containers
     , math-functions
-    , tasty             ^>=1.2.3
+    , tasty             ^>=1.2.3 || ^>=1.3.1
     , tasty-quickcheck  ^>=0.10.1
 
   if !impl(ghc >=7.10)
