--- a/ral-lens/ral-lens.cabal
+++ b/ral-lens/ral-lens.cabal
@@ -1,7 +1,6 @@
 cabal-version:      2.2
 name:               ral-lens
-version:            0.1
-x-revision:         1
+version:            0.2
 synopsis:           Length-indexed random access lists: lens utilities.
 category:           Data, Dependent Types, Singletons, Lens
 description:
@@ -14,7 +13,7 @@ license:            GPL-2.0-or-later
 license-file:       LICENSE
 author:             Oleg Grenrus <oleg.grenrus@iki.fi>
 maintainer:         Oleg.Grenrus <oleg.grenrus@iki.fi>
-copyright:          (c) 2019 Oleg Grenrus
+copyright:          (c) 2019-2021 Oleg Grenrus
 build-type:         Simple
 extra-source-files: ChangeLog.md
 tested-with:
@@ -47,9 +46,9 @@ library
   build-depends:
     , base  >=4.7   && <4.15
     , bin   ^>=0.1
-    , fin   ^>=0.1.1
+    , fin   ^>=0.2
     , lens  >=4.16  && <4.20
-    , ral   ^>=0.1
+    , ral   ^>=0.2
 
 -- dump-core
 -- if impl(ghc >= 8.0)
