--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -8,9 +8,9 @@
 #
 # For more information, see https://github.com/haskell-CI/haskell-ci
 #
-# version: 0.11.20201223
+# version: 0.11.20210101
 #
-# REGENDATA ("0.11.20201223",["github","--config=cabal.haskell-ci","cabal.project"])
+# REGENDATA ("0.11.20210101",["github","--config=cabal.haskell-ci","cabal.project"])
 #
 name: Haskell-CI
 on:
@@ -70,8 +70,8 @@ jobs:
           echo "CABAL=/opt/cabal/3.2/bin/cabal -vnormal+nowrap" >> $GITHUB_ENV
           HCNUMVER=$(${HC} --numeric-version|perl -ne '/^(\d+)\.(\d+)\.(\d+)(\.(\d+))?$/; print(10000 * $1 + 100 * $2 + ($3 == 0 ? $5 != 1 : $3))')
           echo "HCNUMVER=$HCNUMVER" >> $GITHUB_ENV
-          if [ $((HCNUMVER >= 80000 && HCNUMVER < 81000)) -ne 0 ] ; then echo "ARG_TESTS=--enable-tests" >> $GITHUB_ENV ; else echo "ARG_TESTS=--disable-tests" >> $GITHUB_ENV ; fi
-          if [ $((HCNUMVER < 81000)) -ne 0 ] ; then echo "ARG_BENCH=--enable-benchmarks" >> $GITHUB_ENV ; else echo "ARG_BENCH=--disable-benchmarks" >> $GITHUB_ENV ; fi
+          if [ $((HCNUMVER >= 80000)) -ne 0 ] ; then echo "ARG_TESTS=--enable-tests" >> $GITHUB_ENV ; else echo "ARG_TESTS=--disable-tests" >> $GITHUB_ENV ; fi
+          echo "ARG_BENCH=--enable-benchmarks" >> $GITHUB_ENV
           echo "ARG_COMPILER=--ghc --with-compiler=/opt/ghc/$GHC_VERSION/bin/ghc" >> $GITHUB_ENV
           echo "GHCJSARITH=0" >> $GITHUB_ENV
         env:
@@ -110,7 +110,7 @@ jobs:
       - name: cache (tools)
         uses: actions/cache@v2
         with:
-          key: ${{ runner.os }}-${{ matrix.ghc }}-tools-6fc46659
+          key: ${{ runner.os }}-${{ matrix.ghc }}-tools-7ecacd99
           path: ~/.haskell-ci-tools
       - name: install cabal-plan
         run: |
@@ -120,10 +120,20 @@ jobs:
           xz -d < cabal-plan.xz > $HOME/.cabal/bin/cabal-plan
           rm -f cabal-plan.xz
           chmod a+x $HOME/.cabal/bin/cabal-plan
+          cabal-plan --version
+      - name: install cabal-docspec
+        run: |
+          mkdir -p $HOME/.cabal/bin
+          curl -sL https://github.com/phadej/cabal-extras/releases/download/cabal-docspec-0.0.0.20201230.1/cabal-docspec-0.0.0.20201230.1.xz > cabal-docspec.xz
+          echo '18caf4f361fadd978782f08e78f42d21d4f177567419055ffccae19b8214852d  cabal-docspec.xz' | sha256sum -c -
+          xz -d < cabal-docspec.xz > $HOME/.cabal/bin/cabal-docspec
+          rm -f cabal-docspec.xz
+          chmod a+x $HOME/.cabal/bin/cabal-docspec
+          cabal-docspec --version
       - name: install doctest
         run: |
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then $CABAL --store-dir=$HOME/.haskell-ci-tools/store v2-install $ARG_COMPILER --ignore-project -j2 doctest --constraint='doctest ^>=0.17' ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then doctest --version ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then $CABAL --store-dir=$HOME/.haskell-ci-tools/store v2-install $ARG_COMPILER --ignore-project -j2 doctest --constraint='doctest ^>=0.17' ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest --version ; fi
       - name: checkout
         uses: actions/checkout@v2
         with:
@@ -219,29 +229,33 @@ jobs:
           $CABAL v2-build $ARG_COMPILER $ARG_TESTS $ARG_BENCH all --write-ghc-environment-files=always
       - name: tests
         run: |
-          if [ $((HCNUMVER >= 80000 && HCNUMVER < 81000)) -ne 0 ] ; then $CABAL v2-test $ARG_COMPILER $ARG_TESTS $ARG_BENCH all --test-show-details=direct ; fi
+          if [ $((HCNUMVER >= 80000)) -ne 0 ] ; then $CABAL v2-test $ARG_COMPILER $ARG_TESTS $ARG_BENCH all --test-show-details=direct ; fi
       - name: doctest
         run: |
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then cd ${PKGDIR_bin} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then doctest  src ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then cd ${PKGDIR_dec} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then doctest  src ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then cd ${PKGDIR_fin} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then doctest  src ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then cd ${PKGDIR_ral} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then doctest  src ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then cd ${PKGDIR_vec} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then doctest  src ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then cd ${PKGDIR_ral_lens} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then doctest  src ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then cd ${PKGDIR_vec_lens} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then doctest  src ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then cd ${PKGDIR_ral_optics} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then doctest  src ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then cd ${PKGDIR_vec_optics} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then doctest  src ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then cd ${PKGDIR_tests} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 81000)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_bin} || false ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_dec} || false ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_fin} || false ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_ral} || false ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_vec} || false ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_ral_lens} || false ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_vec_lens} || false ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_ral_optics} || false ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_vec_optics} || false ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_tests} || false ; fi
+          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
+      - name: docspec
+        run: |
+          $CABAL v2-build $ARG_COMPILER $ARG_TESTS $ARG_BENCH all
+          cabal-docspec $ARG_COMPILER
       - name: cabal check
         run: |
           cd ${PKGDIR_bin} || false
