--- a/vec/vec.cabal
+++ b/vec/vec.cabal
@@ -104,9 +104,9 @@ flag semigroupoids
   default:     True
 
 library
-  default-language: Haskell2010
-  ghc-options:      -Wall -fprint-explicit-kinds
-  hs-source-dirs:   src
+  default-language:         Haskell2010
+  ghc-options:              -Wall -fprint-explicit-kinds
+  hs-source-dirs:           src
   exposed-modules:
     Data.Vec.DataFamily.SpineStrict
     Data.Vec.DataFamily.SpineStrict.Pigeonhole
@@ -131,12 +131,13 @@ library
     build-depends: transformers-compat ^>=0.6.5
 
   -- siblings
-  build-depends:    fin ^>=0.2
+  build-depends:            fin ^>=0.2
 
   -- other dependencies
   build-depends:
-    , hashable    >=1.2.7.0 && <1.4
-    , QuickCheck  ^>=2.13.2 || ^>=2.14
+    , hashable             >=1.2.7.0 && <1.4
+    , indexed-traversable  ^>=0.1.1
+    , QuickCheck           ^>=2.14.2
 
   if flag(distributive)
     build-depends: distributive >=0.5.3 && <0.7
