--- a/bin/bin.cabal
+++ b/bin/bin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.2
 name:               bin
-version:            0.1.0.1
+version:            0.1.1
 synopsis:           Bin: binary natural numbers.
 category:           Data, Dependent Types, Singletons, Math
 description:
@@ -61,6 +61,7 @@ library
     Data.Type.BinP
     Data.Wrd
 
+  other-modules:    TrustworthyCompat
   build-depends:
     , base        >=4.7     && <4.15
     , dec         ^>=0.0.3
@@ -71,6 +72,11 @@ library
 
   if !impl(ghc >=7.10)
     build-depends: nats ^>=1.1.2
+
+  if impl(ghc >= 9.0)
+    -- these flags may abort compilation with GHC-8.10
+    -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/3295
+    ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode
 
 -- dump-core
 -- if impl(ghc >= 8.0)
