--- a/bin/cabal.project
+++ b/bin/cabal.project
@@ -1,3 +1,10 @@
 packages: .
 packages: ../fin
 packages: ../dec
+
+-- for testing GHC-9.0
+allow-newer: bin:base
+allow-newer: fin:base
+allow-newer: dec:base
+allow-newer: hashable-1.3.0.0:base
+allow-newer: hashable-1.3.0.0:integer-gmp
