--- a/dec/dec.cabal
+++ b/dec/dec.cabal
@@ -1,7 +1,6 @@
 cabal-version:      >=1.10
 name:               dec
-version:            0.0.3
-x-revision:         2
+version:            0.0.4
 synopsis:           Decidable propositions.
 category:           Data, Dependent Types
 description:
@@ -40,12 +39,16 @@ source-repository head
   subdir:   dec
 
 library
+  default-language: Haskell2010
+  hs-source-dirs:   src
+  ghc-options:      -Wall -fprint-explicit-kinds
   exposed-modules:  Data.Type.Dec
   build-depends:    base >=4.7 && <4.15
 
   if !impl(ghc >=7.10)
-    build-depends: void >=0.7.2 && <0.8
+    build-depends: void >=0.7.3 && <0.8
 
-  ghc-options:      -Wall -fprint-explicit-kinds
-  hs-source-dirs:   src
-  default-language: Haskell2010
+  if impl(ghc >= 8.10)
+    -- these flags may abort compilation with GHC-8.10
+    -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/3295
+    ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode
