--- a/fin/cabal.project
+++ b/fin/cabal.project
@@ -1,2 +1,8 @@
 packages: .
 packages: ../dec
+
+-- for testing GHC-9.0
+allow-newer: fin:base
+allow-newer: dec:base
+allow-newer: hashable-1.3.0.0:base
+allow-newer: hashable-1.3.0.0:integer-gmp
