--- a/fin/fin.cabal
+++ b/fin/fin.cabal
@@ -71,6 +71,9 @@ source-repository head
   subdir:   fin
 
 library
+  default-language: Haskell2010
+  ghc-options:      -Wall -fprint-explicit-kinds
+  hs-source-dirs:   src
   exposed-modules:
     Data.Fin
     Data.Fin.Enum
@@ -80,28 +83,30 @@ library
     Data.Type.Nat.LE.ReflStep
     Data.Type.Nat.LT
 
+  other-modules:    TrustworthyCompat
   build-depends:
       base           >=4.7     && <4.15
-    , dec            >=0.0.3   && <0.1
+    , dec            >=0.0.4   && <0.1
     , deepseq        >=1.3.0.2 && <1.5
     , hashable       >=1.2.7.0 && <1.4
     , QuickCheck     >=2.13.2  && <2.15
-    , universe-base  >=1.1.1   && <1.2
+    , universe-base  >=1.1.2   && <1.2
 
   if !impl(ghc >=8.2)
     build-depends: bifunctors >=5.5.3 && <5.6
 
   if !impl(ghc >=8.0)
-    build-depends: semigroups >=0.18.4 && <0.20
+    build-depends: semigroups >=0.18.5 && <0.20
 
   if !impl(ghc >=7.10)
     build-depends:
         nats  >=1.1.2 && <1.2
-      , void  >=0.7.2 && <0.8
+      , void  >=0.7.3 && <0.8
 
-  ghc-options:      -Wall -fprint-explicit-kinds
-  hs-source-dirs:   src
-  default-language: Haskell2010
+  if impl(ghc >=9.0)
+    -- these flags may abort compilation with GHC-8.10
+    -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/3295
+    ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode
 
 -- dump-core
 -- if impl(ghc >= 8.0)
