--- a/ral/ral.cabal
+++ b/ral/ral.cabal
@@ -79,6 +79,7 @@ library
     Data.RAList.Internal
     Data.RAList.NonEmpty.Internal
     Data.RAList.Tree.Internal
+    TrustworthyCompat
 
   -- GHC boot libs
   build-depends:
@@ -86,7 +87,7 @@ library
     , deepseq  >=1.3.0.1 && <1.5
 
   if !impl(ghc >=8.0)
-    build-depends: semigroups >=0.18.4 && <0.20
+    build-depends: semigroups >=0.18.5 && <0.20
 
   -- siblings
   build-depends:
@@ -106,7 +107,12 @@ library
       build-depends: adjunctions ^>=4.4
 
   if flag(semigroupoids)
-    build-depends: semigroupoids >=5.2.2 && <5.4
+    build-depends: semigroupoids ^>=5.3.5
+
+  if impl(ghc >=9.0)
+    -- these flags may abort compilation with GHC-8.10
+    -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/3295
+    ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode
 
 -- dump-core
 -- if impl(ghc >= 8.0)
