--- a/vec/vec.cabal
+++ b/vec/vec.cabal
@@ -127,7 +127,10 @@ library
   if !impl(ghc >=8.0)
     build-depends: semigroups >=0.18.4 && <0.20
 
-  if !impl(ghc >=7.10)
+  -- Ensure Data.Functor.Classes is always available
+  if impl(ghc >= 7.10)
+    build-depends: transformers >= 0.4.2.0
+  else
     build-depends: transformers-compat ^>=0.6.5
 
   -- siblings
