--- a/ral-optics/ral-optics.cabal
+++ b/ral-optics/ral-optics.cabal
@@ -17,7 +17,13 @@ copyright:          (c) 2019-2021 Oleg Grenrus
 build-type:         Simple
 extra-source-files: ChangeLog.md
 tested-with:
-  GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.3
+  GHC ==8.0.2
+   || ==8.2.2
+   || ==8.4.4
+   || ==8.6.5
+   || ==8.8.4
+   || ==8.10.4
+   || ==9.0.1
 
 source-repository head
   type:     git
@@ -41,10 +47,10 @@ library
     Data.RAVec.NonEmpty.Optics.Internal
 
   build-depends:
-    , base         >=4.9   && <4.16
+    , base         >=4.9 && <4.16
     , bin          ^>=0.1
     , fin          ^>=0.2
-    , optics-core  >=0.2   && <0.5
+    , optics-core  >=0.2 && <0.5
     , ral          ^>=0.2
 
 -- dump-core
