--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -8,9 +8,9 @@
 #
 # For more information, see https://github.com/haskell-CI/haskell-ci
 #
-# version: 0.11.20210101
+# version: 0.11.20210222
 #
-# REGENDATA ("0.11.20210101",["github","--config=cabal.haskell-ci","cabal.project"])
+# REGENDATA ("0.11.20210222",["github","--config=cabal.haskell-ci","cabal.project"])
 #
 name: Haskell-CI
 on:
@@ -22,7 +22,7 @@ on:
       - master
 jobs:
   linux:
-    name: Haskell-CI Linux - GHC ${{ matrix.ghc }}
+    name: Haskell-CI - Linux - GHC ${{ matrix.ghc }}
     runs-on: ubuntu-18.04
     container:
       image: buildpack-deps:bionic
@@ -30,7 +30,9 @@ jobs:
     strategy:
       matrix:
         include:
-          - ghc: 8.10.3
+          - ghc: 9.0.1
+            allow-failure: false
+          - ghc: 8.10.4
             allow-failure: false
           - ghc: 8.8.4
             allow-failure: false
@@ -54,7 +56,7 @@ jobs:
           apt-get install -y --no-install-recommends gnupg ca-certificates dirmngr curl git software-properties-common
           apt-add-repository -y 'ppa:hvr/ghc'
           apt-get update
-          apt-get install -y ghc-$GHC_VERSION cabal-install-3.2
+          apt-get install -y ghc-$GHC_VERSION cabal-install-3.4
         env:
           GHC_VERSION: ${{ matrix.ghc }}
       - name: Set PATH and environment variables
@@ -67,12 +69,13 @@ jobs:
           echo "HC=$HC" >> $GITHUB_ENV
           echo "HCPKG=/opt/ghc/$GHC_VERSION/bin/ghc-pkg" >> $GITHUB_ENV
           echo "HADDOCK=/opt/ghc/$GHC_VERSION/bin/haddock" >> $GITHUB_ENV
-          echo "CABAL=/opt/cabal/3.2/bin/cabal -vnormal+nowrap" >> $GITHUB_ENV
+          echo "CABAL=/opt/cabal/3.4/bin/cabal -vnormal+nowrap" >> $GITHUB_ENV
           HCNUMVER=$(${HC} --numeric-version|perl -ne '/^(\d+)\.(\d+)\.(\d+)(\.(\d+))?$/; print(10000 * $1 + 100 * $2 + ($3 == 0 ? $5 != 1 : $3))')
           echo "HCNUMVER=$HCNUMVER" >> $GITHUB_ENV
           if [ $((HCNUMVER >= 80000)) -ne 0 ] ; then echo "ARG_TESTS=--enable-tests" >> $GITHUB_ENV ; else echo "ARG_TESTS=--disable-tests" >> $GITHUB_ENV ; fi
           echo "ARG_BENCH=--enable-benchmarks" >> $GITHUB_ENV
-          echo "ARG_COMPILER=--ghc --with-compiler=/opt/ghc/$GHC_VERSION/bin/ghc" >> $GITHUB_ENV
+          echo "HEADHACKAGE=false" >> $GITHUB_ENV
+          echo "ARG_COMPILER=--ghc --with-compiler=$HC" >> $GITHUB_ENV
           echo "GHCJSARITH=0" >> $GITHUB_ENV
         env:
           GHC_VERSION: ${{ matrix.ghc }}
@@ -110,7 +113,7 @@ jobs:
       - name: cache (tools)
         uses: actions/cache@v2
         with:
-          key: ${{ runner.os }}-${{ matrix.ghc }}-tools-7ecacd99
+          key: ${{ runner.os }}-${{ matrix.ghc }}-tools-6ddf942f
           path: ~/.haskell-ci-tools
       - name: install cabal-plan
         run: |
@@ -124,24 +127,37 @@ jobs:
       - name: install cabal-docspec
         run: |
           mkdir -p $HOME/.cabal/bin
-          curl -sL https://github.com/phadej/cabal-extras/releases/download/cabal-docspec-0.0.0.20201230.1/cabal-docspec-0.0.0.20201230.1.xz > cabal-docspec.xz
-          echo '18caf4f361fadd978782f08e78f42d21d4f177567419055ffccae19b8214852d  cabal-docspec.xz' | sha256sum -c -
+          curl -sL https://github.com/phadej/cabal-extras/releases/download/cabal-docspec-0.0.0.20210111/cabal-docspec-0.0.0.20210111.xz > cabal-docspec.xz
+          echo '0829bd034fba901cbcfe491d98ed8b28fd54f9cb5c91fa8e1ac62dc4413c9562  cabal-docspec.xz' | sha256sum -c -
           xz -d < cabal-docspec.xz > $HOME/.cabal/bin/cabal-docspec
           rm -f cabal-docspec.xz
           chmod a+x $HOME/.cabal/bin/cabal-docspec
           cabal-docspec --version
       - name: install doctest
         run: |
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then $CABAL --store-dir=$HOME/.haskell-ci-tools/store v2-install $ARG_COMPILER --ignore-project -j2 doctest --constraint='doctest ^>=0.17' ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest --version ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then $CABAL --store-dir=$HOME/.haskell-ci-tools/store v2-install $ARG_COMPILER --ignore-project -j2 doctest --constraint='doctest ^>=0.17' ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest --version ; fi
       - name: checkout
         uses: actions/checkout@v2
         with:
           path: source
+      - name: initial cabal.project for sdist
+        run: |
+          touch cabal.project
+          echo "packages: $GITHUB_WORKSPACE/source/bin" >> cabal.project
+          echo "packages: $GITHUB_WORKSPACE/source/dec" >> cabal.project
+          echo "packages: $GITHUB_WORKSPACE/source/fin" >> cabal.project
+          echo "packages: $GITHUB_WORKSPACE/source/ral" >> cabal.project
+          echo "packages: $GITHUB_WORKSPACE/source/vec" >> cabal.project
+          echo "packages: $GITHUB_WORKSPACE/source/ral-lens" >> cabal.project
+          echo "packages: $GITHUB_WORKSPACE/source/vec-lens" >> cabal.project
+          if [ $((HCNUMVER >= 80000)) -ne 0 ] ; then echo "packages: $GITHUB_WORKSPACE/source/ral-optics" >> cabal.project ; fi
+          if [ $((HCNUMVER >= 80000)) -ne 0 ] ; then echo "packages: $GITHUB_WORKSPACE/source/vec-optics" >> cabal.project ; fi
+          echo "packages: $GITHUB_WORKSPACE/source/tests" >> cabal.project
+          cat cabal.project
       - name: sdist
         run: |
           mkdir -p sdist
-          cd source || false
           $CABAL sdist all --output-dir $GITHUB_WORKSPACE/sdist
       - name: unpack
         run: |
@@ -202,7 +218,9 @@ jobs:
           if [ $((HCNUMVER >= 80200)) -ne 0 ] ; then echo "package tests" >> cabal.project ; fi
           if [ $((HCNUMVER >= 80200)) -ne 0 ] ; then echo "    ghc-options: -Werror=missing-methods" >> cabal.project ; fi
           cat >> cabal.project <<EOF
-          allow-newer: parallel-3.2.2.0:base
+          allow-newer: cassava-0.5.2.0:base
+          allow-newer: vector-th-unbox-0.2.1.7:base
+          allow-newer: vector-th-unbox-0.2.1.7:template-haskell
           EOF
           $HCPKG list --simple-output --names-only | perl -ne 'for (split /\s+/) { print "constraints: $_ installed\n" unless /^(bin|dec|fin|ral|ral-lens|ral-optics|tests|vec|vec-lens|vec-optics)$/; }' >> cabal.project.local
           cat cabal.project
@@ -232,30 +250,30 @@ jobs:
           if [ $((HCNUMVER >= 80000)) -ne 0 ] ; then $CABAL v2-test $ARG_COMPILER $ARG_TESTS $ARG_BENCH all --test-show-details=direct ; fi
       - name: doctest
         run: |
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_bin} || false ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_dec} || false ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_fin} || false ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_ral} || false ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_vec} || false ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_ral_lens} || false ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_vec_lens} || false ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_ral_optics} || false ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_vec_optics} || false ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then cd ${PKGDIR_tests} || false ; fi
-          if [ $((HCNUMVER >= 80600)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_bin} || false ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_dec} || false ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_fin} || false ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_ral} || false ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_vec} || false ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_ral_lens} || false ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_vec_lens} || false ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_ral_optics} || false ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_vec_optics} || false ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_tests} || false ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
       - name: docspec
         run: |
-          $CABAL v2-build $ARG_COMPILER $ARG_TESTS $ARG_BENCH all
-          cabal-docspec $ARG_COMPILER
+          if [ $((HCNUMVER >= 71000)) -ne 0 ] ; then $CABAL v2-build $ARG_COMPILER $ARG_TESTS $ARG_BENCH all ; fi
+          if [ $((HCNUMVER >= 71000)) -ne 0 ] ; then cabal-docspec $ARG_COMPILER ; fi
       - name: cabal check
         run: |
           cd ${PKGDIR_bin} || false
