--- a/fin/fin.cabal
+++ b/fin/fin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      >=1.10
 name:               fin
-version:            0.2
+version:            0.2.1
 synopsis:           Nat and Fin: peano naturals and finite numbers
 category:           Data, Dependent Types, Singletons, Math
 description:
@@ -87,6 +87,7 @@ library
   other-modules:    TrustworthyCompat
   build-depends:
       base           >=4.7     && <4.16
+    , boring         >=0.2     && <0.3
     , dec            >=0.0.4   && <0.1
     , deepseq        >=1.3.0.2 && <1.5
     , hashable       >=1.2.7.0 && <1.4
