--- a/dec/dec.cabal
+++ b/dec/dec.cabal
@@ -1,6 +1,7 @@
 cabal-version:      >=1.10
 name:               dec
 version:            0.0.5
+x-revision:         1
 synopsis:           Decidable propositions.
 category:           Data, Dependent Types
 description:
@@ -33,6 +34,7 @@ tested-with:
    || ==8.8.4
    || ==8.10.4
    || ==9.0.1
+   || ==9.2.1
 
 source-repository head
   type:     git
@@ -45,7 +47,7 @@ library
   ghc-options:      -Wall -fprint-explicit-kinds
   exposed-modules:  Data.Type.Dec
   build-depends:
-      base    >=4.7 && <4.16
+      base    >=4.7 && <4.17
     , boring  >=0.2 && <0.3
 
   if !impl(ghc >=7.10)
