--- a/tests/tests.cabal
+++ b/tests/tests.cabal
@@ -22,6 +22,7 @@ tested-with:
    || ==8.8.4
    || ==8.10.4
    || ==9.0.1
+   || ==9.2.1
 
 source-repository head
   type:     git
@@ -48,7 +49,7 @@ library
   build-depends:
     , containers
     , math-functions
-    , tasty             ^>=1.2.3 || ^>=1.3.1 || ^>=1.4
+    , tasty             ^>=1.4
     , tasty-quickcheck  ^>=0.10.1
 
   if !impl(ghc >=7.10)
