Add dfoldr, dfoldl, and dfoldl'
Use them to implement reverse

Resolves #94

--- a/vec/vec.cabal
+++ b/vec/vec.cabal
@@ -118,6 +118,7 @@ library
   other-modules:
     Control.Lens.Yocto
     Data.Functor.Confusing
+    SafeCompat
 
   -- GHC boot libs
   build-depends:
