--- a/fin/fin.cabal
+++ b/fin/fin.cabal
@@ -93,6 +93,7 @@ library
     , deepseq        >=1.3.0.2 && <1.5
     , hashable       >=1.2.7.0 && <1.5
     , QuickCheck     >=2.13.2  && <2.15
+    , some           >=1.0.3   && <1.1
     , universe-base  >=1.1.2   && <1.2
 
   if !impl(ghc >=8.2)
