base-4.18 and some-1.0.5

--- a/vec-lens/vec-lens.cabal
+++ b/vec-lens/vec-lens.cabal
@@ -30,8 +30,9 @@ tested-with:
    || ==8.8.4
    || ==8.10.7
    || ==9.0.2
-   || ==9.2.4
-   || ==9.4.1
+   || ==9.2.7
+   || ==9.4.4
+   || ==9.6.1
 
 source-repository head
   type:     git
@@ -50,12 +51,12 @@ library
     Data.Vec.Pull.Lens
 
   -- GHC boot libs
-  build-depends:    base >=4.7 && <4.18
+  build-depends:    base >=4.7 && <4.19
 
   -- siblings
   build-depends:
-    , fin  ^>=0.2
-    , vec  ^>=0.4
+    , fin  ^>=0.2 || ^>=0.3
+    , vec  ^>=0.4 || ^>=0.5
 
   -- other dependencies
   build-depends:    lens ^>=4.18.1 || ^>=4.19.1 || ^>=5 || ^>=5.1 || ^>=5.2
