--- a/tests/tests.cabal
+++ b/tests/tests.cabal
@@ -22,9 +22,10 @@ tested-with:
    || ==8.8.4
    || ==8.10.7
    || ==9.0.2
-   || ==9.2.7
-   || ==9.4.4
-   || ==9.6.1
+   || ==9.2.8
+   || ==9.4.7
+   || ==9.6.3
+   || ==9.8.1
 
 source-repository head
   type:     git
@@ -51,7 +52,7 @@ library
   build-depends:
     , containers
     , math-functions
-    , tasty             ^>=1.4
+    , tasty             ^>=1.4    || ^>=1.5
     , tasty-quickcheck  ^>=0.10.1
 
   if !impl(ghc >=7.10)
